# agentcore-sre-reference

./: .gitignore  .source-scan-excludes  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NORTH_STAR.md  README.md  SECURITY.md  SUPPORT.md
.claude/docs/: architecture-deep-dive.md  dev-guide.md  gotchas-full.md
.claude/skills/: frontend-design.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  contact_request.yml  proposal.yml
.github/workflows/: ci-cd.yml
bridge/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  slack_manifest.json
bridge/bridge/: api.py  api_models.py  async_dispatcher.py  client.py  dashboard_store.py  dedup.py  gateway_jwt.py  gateway_provisioner.py  github_app.py  github_approval.py  github_install.py  main.py  metrics_reader.py  public_origin.py  rate_limit.py  reaction_feedback.py  sandbox_callback.py  sandbox_progress.py  slack_channels.py  slack_interactions.py  slack_oauth.py  slack_token_store.py  tenant_resolver.py  tenant_write.py
bridge/bridge/adapters/: core.py  debug.py  slack.py
bridge/tests/: conftest.py  test_api_channels.py  test_api_connectors.py  test_api_integrations.py  test_api_tenants.py  test_bot_policy.py  test_client.py  test_code_backend.py  test_codebase_memory.py  test_codebase_resolver.py  test_context_assembly.py  test_dashboards.py  test_dedup.py  test_gateway_jwt.py  test_gateway_provisioner.py  test_github_approval.py  test_github_install.py  test_metrics_reader.py  test_oauth_callback_redirect.py  test_oauth_public_origin.py  test_reaction_feedback.py  test_sandbox_callback.py  test_session_token.py  test_slack_api_membership.py  test_slack_interactions.py  test_slack_signature.py  test_tenant_resolver.py  test_tenant_write.py
coreAgent/: README.md
coreAgent/agentcore/: .gitignore  agentcore.json  aws-targets.example.json
coreAgent/app/coreAgent/: README.md  audit.py  builtin_skills.py  code_backend.py  codebase_memory.py  codebase_resolver.py  context_assembler.py  main.py  memory_store.py  metrics.py  ping.py  pricing.py  pyproject.toml  request_context.py  runtime.py  scm_github.py  slack_api.py  spend_tracker.py  tenant.py  test_metrics.py  tools.py
coreAgent/app/coreAgent/mcp_client/: client.py
coreAgent/app/coreAgent/model/: load.py
coreAgent/app/coreAgent/tests/: conftest.py  test_async_lifecycle.py  test_authorization.py  test_builtin_skills.py  test_context_assembler.py  test_dashboard_tool.py  test_ping.py  test_slack_api.py
coreAgent/app/coreAgent/tests/eval/: __init__.py  conftest.py  scenarios.py  scoring.py  test_investigation.py
examples/: dashboard.sample.json  workspace_to_tenant.json
examples/skills/: sre-library.json
examples/tenants/: demo.json  slack-smoketest.json  sre-ops.json
infra/sandbox/: Dockerfile  README.md  agent.py  entrypoint.py  pyproject.toml  requirements.txt  scm_github.py
infra/sandbox/tests/: test_agent.py
onboarding/: .env.example  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
scripts/: __init__.py  agentcore_cli_regions.txt  agentcore_regions.txt  approve_github_installation.py  bootstrap_local_env.py  check.sh  configure_aws.py  create_demo_dashboard.py  demo.sh  deploy_agent.sh  dev-up.sh  dev_up.py  doctor.sh  offline_aws_env.sh  resolve_agent_runtime.sh  self_host.py  setup.sh  smoke.py  smoke.sh  testenv-bootstrap.sh  testenv-inject-alert.sh
seed/: README.md  __init__.py  seed_datadog_metrics.py  seed_slack_threads.py
workers/gateway_interceptor/: pyproject.toml
workers/gateway_interceptor/gateway_interceptor/: __init__.py  handler.py
workers/gateway_interceptor/tests/: conftest.py  test_handler.py
(+140 files in other folders)
