[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bridge"
version = "0.1.0"
description = "FastAPI bridge from client transports (Slack, etc.) to coreAgent on AgentCore Runtime"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi >= 0.110",
    "uvicorn[standard] >= 0.27",
    "httpx >= 0.27",
    "boto3 >= 1.34",
    "pydantic >= 2.0",
]

[project.optional-dependencies]
slack = ["slack-sdk >= 3.27"]

[tool.hatch.build.targets.wheel]
packages = ["bridge"]
