[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bridge"
version = "0.1.0"
description = "FastAPI bridge from client transports (Slack, etc.) to coreAgent on AgentCore Runtime"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi >= 0.110",
    "uvicorn[standard] >= 0.27",
    "httpx >= 0.27",
    "boto3 >= 1.34",
    "pydantic >= 2.0",
    "slack-sdk >= 3.27",
    # slack-sdk's AsyncWebClient imports aiohttp at module load but does not
    # declare it as an install-time dependency. Without this line the OAuth
    # callback path explodes with ModuleNotFoundError on first install.
    "aiohttp >= 3.9",
]

[project.optional-dependencies]
dev = [
    "pytest >= 8.0",
    "pytest-asyncio >= 0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["bridge"]
