[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coreAgent"
version = "0.1.0"
description = "AgentCore Runtime Application using Strands SDK"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "aws-opentelemetry-distro",
    "bedrock-agentcore >= 1.0.3",
    "botocore[crt] >= 1.35.0",
    "mcp >= 1.19.0",
    "strands-agents >= 1.13.0",
    "pydantic >= 2.0",
    # GitHub App JWT signing (RS256). The [crypto] extra pulls in the
    # `cryptography` backend required for RS256. Used by `scm_github.py`
    # to mint installation access tokens.
    "pyjwt[crypto] >= 2.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
